Kelsey Development Sandbox/src/objects/DS_PTSD_CA_F__c.object
<CustomObject>
    <fields>
        <fullName>FPTSORNP__c</fullName>
        <description>PTSD overall raw - Num (PTSD Met) Parent</description>
        <formula>FPTSBRNP__c  +  FPTSCRNP__c  +  FPTSDRNP__c  +  FPTSERNP__c</formula>
        <label>FPTSORNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSORN__c</fullName>
        <formula>FPTSBRN__c + FPTSCRN__c + FPTSDRN__c + FPTSERN__c</formula>
        <label>FPTSORN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSV10P__c</fullName>
        <description>My child has bad dreams about what happened, or other bad dreams.</description>
        <label>FPTSV10P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSV10__c</fullName>
        <description>10B2 I have bad dreams about what happened, or other bad dreams.</description>
        <label>FPTSV10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSV11P__c</fullName>
        <description>When something reminds my child of what happened, he/she gets very upset, afraid, or sad.</description>
        <label>FPTSV11P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSV11__c</fullName>
        <description>11B4 When something reminds me of what happened I get very upset, afraid, or sad.</description>
        <label>FPTSV11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSV12P__c</fullName>
        <description>My child has trouble feeling happiness or love.</description>
        <label>FPTSV12P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSV12__c</fullName>
        <description>12D7 I have trouble feeling happiness or love.</description>
        <label>FPTSV12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPTSVDA1P__c</fullName>
        <description>Dissociative Symptoms A1 Parent</description>
        <label>FPTSVDA1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDA1__c</fullName>
        <description>PTSD Dissociative Symptoms Highest Score 28 and 29</description>
        <label>FPTSVDA1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDA2P__c</fullName>
        <description>Dissociative Symptoms A2 Parent</description>
        <label>FPTSVDA2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDA2__c</fullName>
        <description>PTSD Dissociative Symptoms Highest Score 30 and 31</description>
        <label>FPTSVDA2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDACNP__c</fullName>
        <description>Cut off number for symptom A Parent</description>
        <label>FPTSVDACNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDACN__c</fullName>
        <description>Cut off number for symptom A</description>
        <label>FPTSVDACN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDARNP__c</fullName>
        <description>Dissociative Symptoms Sum A1 and A2 Parent</description>
        <formula>FPTSVDA1P__c  +  FPTSVDA2P__c</formula>
        <label>FPTSVDARNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDARN__c</fullName>
        <formula>FPTSVDA1__c + FPTSVDA2__c</formula>
        <label>FPTSVDARN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDSNP__c</fullName>
        <description>One or more of the Dissociative Symptoms are present Parent</description>
        <formula>IF( ISNULL(FPTSVDACNP__c), NULL, IF(FPTSVDACNP__c  &gt;=  1, 1, 0 ))</formula>
        <label>FPTSVDSNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDSN__c</fullName>
        <formula>IF( ISNULL(FPTSVDACN__c), NULL, IF(FPTSVDACN__c &gt;= 1, 1, 0 ))</formula>
        <label>FPTSVDSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPTSVDSP__c</fullName>
        <description>DSM-5 PTSD Diagnosis Subtype Parent</description>
        <formula>IF( ISNULL(FPTSVDSNP__c), NULL, IF(FPTSVDSNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSVDSP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPTSVDS__c</fullName>
        <formula>IF( ISNULL(FPTSVDSN__c), NULL, IF(FPTSVDSN__c = 1, &quot;Yes&quot;, &quot;No&quot; ))</formula>
        <label>FPTSVDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_PTSD_CA__c</fullName>
        <label>STATUS PTSD CA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_PTSD_PA__c</fullName>
        <label>STATUS PTSD PA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS PTSD CA F</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>STATUS_PTSD_CA__c</columns>
        <columns>STATUS_PTSD_PA__c</columns>
        <columns>SECTION__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DS PTSD CA F Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DS PTSD CA F</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PTSD_CA_date_cannot_be_before_BDOV</fullName>
        <active>true</active>
        <errorConditionFormula>FDOV__c &gt;  FDOAPTSD__c</errorConditionFormula>
        <errorDisplayField>FDOAPTSD__c</errorDisplayField>
        <errorMessage>Follow-up PTSD date of administration cannot be before follow-up date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &quot;&quot;)) &amp;&amp; (Client__r.DOB1__c &gt; FDOAPTSD__c)</errorConditionFormula>
        <errorDisplayField>FDOAPTSD__c</errorDisplayField>
        <errorMessage>Follow-up date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &quot;&quot;)) &amp;&amp; (FDOAPTSD__c &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>FDOAPTSD__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &quot;&quot;)) &amp;&amp; ISNULL(FDOAPTSD__c )</errorConditionFormula>
        <errorDisplayField>FDOAPTSD__c</errorDisplayField>
        <errorMessage>Please indicate the date of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_must_indicate_method</fullName>
        <active>true</active>
        <description>Method of administration is required.</description>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &quot;&quot;)) &amp;&amp; ISPICKVAL(FMETPTSD__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>FMETPTSD__c</errorDisplayField>
        <errorMessage>Please indicate how this form was administered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_cannot_be_before_BDOV</fullName>
        <active>true</active>
        <errorConditionFormula>FDOV__c &gt;  FDOAPTSDP__c</errorConditionFormula>
        <errorDisplayField>FDOAPTSDP__c</errorDisplayField>
        <errorMessage>Follow-up PTSD date of administration cannot be before follow-up date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &quot;&quot;)) &amp;&amp; (Client__r.DOB1__c &gt; FDOAPTSDP__c)</errorConditionFormula>
        <errorDisplayField>FDOAPTSDP__c</errorDisplayField>
        <errorMessage>Follow-up date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &quot;&quot;)) &amp;&amp; (FDOAPTSDP__c &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>FDOAPTSDP__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &quot;&quot;)) &amp;&amp; ISNULL(FDOAPTSDP__c )</errorConditionFormula>
        <errorDisplayField>FDOAPTSDP__c</errorDisplayField>
        <errorMessage>Please indicate the date of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_must_indicate_method</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &quot;&quot;)) &amp;&amp; ISPICKVAL(FMETPTSDP__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>FMETPTSDP__c</errorDisplayField>
        <errorMessage>Please indicate how this form was administered.</errorMessage>
    </validationRules>
</CustomObject>